--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -5,8 +5,11 @@ name: integration-test
 on:
   pull_request:
     paths:
-      - '.github/workflows/integration-test.yml'
-      - 'database/**'
+      - ".github/workflows/integration-test.yml"
+      - "database/**"
+
+permissions:
+  contents: read
 
 # pipeline to execute
 jobs:
@@ -46,7 +49,7 @@ jobs:
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           # use version from go.mod file
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
           check-latest: true
 
@@ -68,7 +71,7 @@ jobs:
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           # use version from go.mod file
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
           check-latest: true
 
