chore(ci): enhance actions setup (#1312)

--- a/.github/workflows/jsonschema.yml
+++ b/.github/workflows/jsonschema.yml
@@ -6,10 +6,16 @@ on:
   release:
     types: [created]
 
+permissions:
+  contents: read
+
 # pipeline to execute
 jobs:
   schema:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write # for actions/github-script to attach files to release artifacts
 
     steps:
       - name: clone
@@ -27,9 +33,27 @@ jobs:
         run: |
           make jsonschema
 
-      - name: upload
-        uses: skx/github-action-publish-binaries@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload jsonschema
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
-          args: "schema.json"
+          retries: 3
+          script: |
+            const fs = require('fs');
+            const path = './schema.json';
+            const name = 'schema.json';
+
+            const fileContent = fs.readFileSync(path);
+
+            const response = await github.rest.repos.uploadReleaseAsset({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: context.payload.release.id,
+              name: name,
+              data: fileContent,
+              headers: {
+                'content-type': 'text/plain',
+                'content-length': fileContent.length,
+              },
+            });
+
+            core.info(`Uploaded asset: ${response.data.browser_download_url}`);
