--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       VELA_OTEL_TRACING_SAMPLER_RATELIMIT_PER_SECOND: 100
       VELA_STORAGE_ENABLE: 'true'
       VELA_STORAGE_DRIVER: minio
-      VELA_STORAGE_ADDRESS: "http://minio:9000" # Address of the MinIO server
+      VELA_STORAGE_ADDRESS: 'http://minio:9000' # Address of the MinIO server
       VELA_STORAGE_ACCESS_KEY: minioadmin
       VELA_STORAGE_SECRET_KEY: minioadmin
       VELA_STORAGE_USE_SSL: 'false'
@@ -74,10 +74,10 @@ services:
   worker:
     container_name: worker
     image: worker:local
-#    image: target/vela-worker:latest
+    #    image: target/vela-worker:latest
     build:
-        context: ../worker
-        dockerfile: ${VELA_WORKER_DOCKERFILE:-Dockerfile}
+      context: ../worker
+      dockerfile: ${VELA_WORKER_DOCKERFILE:-Dockerfile}
     networks:
       - vela
     environment:
@@ -98,7 +98,7 @@ services:
       VELA_EXECUTOR_OUTPUTS_IMAGE: 'alpine:latest'
       VELA_STORAGE_ENABLE: 'true'
       VELA_STORAGE_DRIVER: minio
-      VELA_STORAGE_ADDRESS: "http://minio:9000"
+      VELA_STORAGE_ADDRESS: 'http://minio:9000'
       VELA_STORAGE_BUCKET: vela
     restart: always
     ports:
@@ -199,15 +199,15 @@ services:
     image: minio/minio
     restart: always
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - '9000:9000'
+      - '9001:9001'
     networks:
       - vela
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
-#      - MINIO_SERVER_URL=http://minio
-#      - MINIO_BROWSER_REDIRECT_URL=http://
+    #      - MINIO_SERVER_URL=http://minio
+    #      - MINIO_BROWSER_REDIRECT_URL=http://
     command: minio server --address ":9000" --console-address ":9001" /data
 
   # The `nginx` compose service hosts the NGINX reverse proxy.
@@ -218,7 +218,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-     - "80:80"
+      - '80:80'
     depends_on:
       - minio
     networks:
