--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    # for codecov report upload
+    permissions:
+      id-token: write
+
     steps:
       - name: clone
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -38,5 +42,5 @@ jobs:
       - name: coverage
         uses: codecov/codecov-action@ad3126e916f78f00edff4ed0317cf185271ccc2d # v5.4.2
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          use_oidc: true
           file: coverage.out
