--- a/.golangci.yml
+++ b/.golangci.yml
@@ -168,7 +168,7 @@ linters:
           - goconst
           - gocyclo
           - wsl
-        path: _test\.go
+        path: (.+)_test\.go
     paths:
       - third_party$
       - builtin$
