--- a/schema/testdata/pipeline/fail/image_and_template.yml
+++ b/schema/testdata/pipeline/fail/image_and_template.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://github.com/go-vela/server/releases/latest/download/schema.json
+
 version: "1"
 
 steps:
@@ -5,3 +7,4 @@ steps:
     image: alpine
     template:
       name: deploy-template
+
