--- a/schema/testdata/pipeline/fail/missing_name.yml
+++ b/schema/testdata/pipeline/fail/missing_name.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://github.com/go-vela/server/releases/latest/download/schema.json
+
 version: "1"
 
 stages:
@@ -6,3 +8,4 @@ stages:
       - image: alpine
         commands:
           - npm test
+
