--- a/schema/testdata/pipeline/fail/ruleset_invalid_matcher.yml
+++ b/schema/testdata/pipeline/fail/ruleset_invalid_matcher.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://github.com/go-vela/server/releases/latest/download/schema.json
+
 version: "1"
 
 steps:
@@ -6,3 +8,4 @@ steps:
     ruleset:
       matcher: invalid_matcher
       branch: [main]
+
