--- a/schema/testdata/pipeline/fail/ruleset_invalid_status.yml
+++ b/schema/testdata/pipeline/fail/ruleset_invalid_status.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://github.com/go-vela/server/releases/latest/download/schema.json
+
 version: "1"
 
 steps:
@@ -8,3 +10,4 @@ steps:
         status: [pending]
       unless:
         branch: main
+
