--- a/schema/testdata/pipeline/fail/ruleset_invalid_values.yml
+++ b/schema/testdata/pipeline/fail/ruleset_invalid_values.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://github.com/go-vela/server/releases/latest/download/schema.json
+
 version: "1"
 
 steps:
@@ -7,3 +9,4 @@ steps:
       if:
         event: invalid_event
         operator: invalid
+
