--- a/schema/testdata/pipeline/pass/stages.yml
+++ b/schema/testdata/pipeline/pass/stages.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://github.com/go-vela/server/releases/latest/download/schema.json
+
 version: "1"
 
 stages:
@@ -18,3 +20,4 @@ stages:
         image: alpine:latest
         commands:
           - echo "hello world"
+
