also include regular secret in test case

--- a/schema/testdata/pipeline/pass/ext_secret.yml
+++ b/schema/testdata/pipeline/pass/ext_secret.yml
@@ -9,6 +9,10 @@ steps:
       - echo "hello world"
 
 secrets:
+  - name: foo1
+    key: github/ocotocat/foo
+    engine: native
+    type: repo
   - origin:
       name: External Vault Secret
       image: target/secret-vault:latest
