--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -5,8 +5,11 @@ name: integration-test
 on:
   pull_request:
     paths:
-      - '.github/workflows/integration-test.yml'
-      - 'database/**'
+      - ".github/workflows/integration-test.yml"
+      - "database/**"
+
+permissions:
+  contents: read
 
 # pipeline to execute
 jobs:
@@ -40,13 +43,13 @@ jobs:
 
     steps:
       - name: clone
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
       - name: install go
-        uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # v5.3.0
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           # use version from go.mod file
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
           check-latest: true
 
@@ -62,13 +65,13 @@ jobs:
 
     steps:
       - name: clone
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
       - name: install go
-        uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # v5.3.0
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           # use version from go.mod file
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
           check-latest: true
 
