--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -5,51 +5,62 @@ name: reviewdog
 on:
   pull_request:
 
+permissions:
+  contents: read
+
 # pipeline to execute
 jobs:
   diff-review:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      pull-requests: write # for reviewdog/action-golangci-lint to report issues using PR comments
+
     steps:
-    - name: clone
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: clone
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-    - name: install go
-      uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # v5.3.0
-      with:
-        # use version from go.mod file
-        go-version-file: 'go.mod'
-        cache: true
-        check-latest: true
+      - name: install go
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
+        with:
+          # use version from go.mod file
+          go-version-file: "go.mod"
+          cache: true
+          check-latest: true
 
-    - name: golangci-lint
-      uses: reviewdog/action-golangci-lint@dd3fda91790ca90e75049e5c767509dc0ec7d99b # v2.7.0
-      with:
-        github_token: ${{ secrets.github_token }}
-        golangci_lint_flags: "--config=.golangci.yml --timeout=5m"
-        fail_on_error: true
-        filter_mode: diff_context
-        reporter: github-pr-review
+      - name: golangci-lint
+        uses: reviewdog/action-golangci-lint@f9bba13753278f6a73b27a56a3ffb1bfda90ed71 # v2.8.0
+        with:
+          github_token: ${{ secrets.github_token }}
+          golangci_lint_flags: "--config=.golangci.yml --timeout=5m"
+          fail_level: error
+          filter_mode: diff_context
+          reporter: github-pr-review
 
   full-review:
     runs-on: ubuntu-latest
 
+    permissions:
+      checks: write # for reviewdog/action-golangci-lint to report issues using checks
+      contents: read # for actions/checkout to fetch code
+
     steps:
-    - name: clone
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: clone
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-    - name: install go
-      uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # v5.3.0
-      with:
-        # use version from go.mod file
-        go-version-file: 'go.mod'
-        cache: true
-        check-latest: true
+      - name: install go
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
+        with:
+          # use version from go.mod file
+          go-version-file: "go.mod"
+          cache: true
+          check-latest: true
 
-    - name: golangci-lint
-      uses: reviewdog/action-golangci-lint@dd3fda91790ca90e75049e5c767509dc0ec7d99b # v2.7.0
-      with:
-        github_token: ${{ secrets.github_token }}
-        golangci_lint_flags: "--config=.golangci.yml --timeout=5m"
-        fail_on_error: false
-        filter_mode: nofilter
+      - name: golangci-lint
+        uses: reviewdog/action-golangci-lint@f9bba13753278f6a73b27a56a3ffb1bfda90ed71 # v2.8.0
+        with:
+          github_token: ${{ secrets.github_token }}
+          golangci_lint_flags: "--config=.golangci.yml --timeout=5m"
+          fail_level: error
+          filter_mode: nofilter
