--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,17 +6,24 @@ on:
   pull_request:
   push:
 
+permissions:
+  contents: read
+
 # pipeline to execute
 jobs:
   test:
     runs-on: ubuntu-latest
 
+    # for codecov report upload
+    permissions:
+      id-token: write
+
     steps:
       - name: clone
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
       - name: install go
-        uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # v5.3.0
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           # use version from go.mod file
           go-version-file: "go.mod"
@@ -33,8 +40,8 @@ jobs:
           make test-jsonschema
 
       - name: coverage
-        uses: codecov/codecov-action@0565863a31f2c772f9f0395002a31e3f06189574 # v5.4.0
+        uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: coverage.out
+          use_oidc: true
+          files: coverage.out
 
