add feature flag for storage

--- a/compiler/template/native/testdata/step/disallowed/tmpl_env.yml
+++ b/compiler/template/native/testdata/step/disallowed/tmpl_env.yml
@@ -4,5 +4,5 @@ metadata:
 steps:
   - name: echo
     commands:
-      - echo {{ env "VELA_SOURCE_CLIENT" }}
+      - echo {{ env "VELA_SCM_CLIENT" }}
     image: alpine:latest
