revert scm to source

--- a/compiler/template/native/testdata/step/disallowed/tmpl_expandenv.yml
+++ b/compiler/template/native/testdata/step/disallowed/tmpl_expandenv.yml
@@ -4,5 +4,5 @@ metadata:
 steps:
   - name: echo
     commands:
-      - echo {{ expandenv "Your client id is set to VELA_SCM_CLIENT" }}
+      - echo {{ expandenv "Your client id is set to VELA_SOURCE_CLIENT" }}
     image: alpine:latest
