--- a/compiler/types/yaml/testdata/step.yml
+++ b/compiler/types/yaml/testdata/step.yml
@@ -45,9 +45,8 @@
       repo: github/octocat
       tags: [latest, dev]
 
-- name: test-reports
+- name: artifacts
   image: golang:1.20
   pull: true
-  test_report:
-    results: ["test-results/*.xml"]
-    attachments: ["screenshots/**/*.png", " video/*.mp4"]
+  artifacts:
+    paths: ["test-results/*.xml","screenshots/**/*.png", " video/*.mp4"]
