--- a/.golangci.yml
+++ b/.golangci.yml
@@ -152,7 +152,10 @@ linters:
     wsl_v5:
       allow-first-in-block: true
       allow-whole-block: false
-      branch-max-lines: 2 
+      branch-max-lines: 2
+    gosec:
+      excludes:
+        - G101
   exclusions:
     generated: lax
     presets:
