--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       VELA_OTEL_TRACING_ENABLE: true
       VELA_OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
       VELA_OTEL_TRACING_SAMPLER_RATELIMIT_PER_SECOND: 100
-      VELA_STORAGE_ENABLE: false
+      VELA_STORAGE_ENABLE: true
       VELA_STORAGE_DRIVER: minio
       VELA_STORAGE_ADDRESS: 'http://minio:9000' # Address of the MinIO server
       VELA_STORAGE_ACCESS_KEY: minioadmin
@@ -76,11 +76,7 @@ services:
   # https://go-vela.github.io/docs/administration/worker/
   worker:
     container_name: worker
-    image: worker:local
-    #    image: target/vela-worker:latest
-    build:
-      context: ../worker
-      dockerfile: ${VELA_WORKER_DOCKERFILE:-Dockerfile}
+    image: target/vela-worker:latest
     networks:
       - vela
     environment:
@@ -99,10 +95,6 @@ services:
       WORKER_ADDR: 'http://worker:8080'
       WORKER_CHECK_IN: 2m
       VELA_EXECUTOR_OUTPUTS_IMAGE: 'alpine:latest'
-      VELA_STORAGE_ENABLE: 'false'
-      VELA_STORAGE_DRIVER: minio
-      VELA_STORAGE_ADDRESS: 'http://minio:9000'
-      VELA_STORAGE_BUCKET: vela
     restart: always
     ports:
       - '8081:8080'
@@ -202,30 +194,14 @@ services:
     image: minio/minio
     restart: always
     ports:
-      - '9000:9000'
       - '9001:9001'
+      - '9002:9002'
     networks:
       - vela
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
-    #      - MINIO_SERVER_URL=http://minio
-    #      - MINIO_BROWSER_REDIRECT_URL=http://
-    command: minio server --address ":9000" --console-address ":9001" /data
-
-  # The `nginx` compose service hosts the NGINX reverse proxy.
-  nginx:
-    image: nginx:latest
-    container_name: minio_nginx
-    restart: always
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    ports:
-      - '80:80'
-    depends_on:
-      - minio
-    networks:
-      - vela
+    command: minio server --address ":9001" --console-address ":9002" /data
 
 networks:
   vela:
