--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       VELA_OTEL_TRACING_ENABLE: true
       VELA_OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
       VELA_OTEL_TRACING_SAMPLER_RATELIMIT_PER_SECOND: 100
-      VELA_STORAGE_ENABLE: true
+      VELA_STORAGE_ENABLE: false
       VELA_STORAGE_DRIVER: minio
       VELA_STORAGE_ADDRESS: 'http://minio:9000' # Address of the MinIO server
       VELA_STORAGE_ACCESS_KEY: minioadmin
