--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -199,8 +199,8 @@ services:
     networks:
       - vela
     environment:
-      - MINIO_ROOT_USER=minioadmin
-      - MINIO_ROOT_PASSWORD=minioadmin
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
     command: minio server --address ":9001" --console-address ":9002" /data
 
 networks:
